# zk-origin

./: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
circuits/: circom.config.js  package-lock.json  package.json
circuits/scripts/: compile.sh  prove.js  setup.sh  verify.js
circuits/src/lib/: comparators.circom  merkle.circom  poseidon.circom  selector.circom
circuits/src/main/: lineage_step.circom  lineage_step_simple.circom
circuits/test/: integration.test.js  lineage_step.test.js  merkle.test.js
contracts/: hardhat.config.js  package-lock.json  package.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: Groth16Verifier.sol  LineageVerifier.sol  PolicyRegistry.sol
contracts/scripts/: deploy.js  setup-policy.js  verify-proof.js
contracts/test/: LineageVerifier.test.js  MockGroth16Verifier.sol
demo/: package.json
demo/scenarios/: policy_violation.json  rate_limit_exceeded.json  valid_lineage.json
demo/src/: cli.ts  demo.ts  utils.ts
prover/: Cargo.toml
prover/benches/: proving_time.rs
prover/examples/: full_demo.rs  simple_lineage.rs
prover/src/: lib.rs
prover/src/circuit/: merkle.rs  mod.rs  poseidon.rs  step.rs
prover/src/prover/: mod.rs  recursive.rs
prover/src/types/: lineage.rs  mod.rs  origin.rs  policy.rs  transition.rs
prover/src/utils/: hash.rs  mod.rs
prover/tests/integration/: invalid_transition_test.rs  multi_step_test.rs  single_step_test.rs
prover/tests/unit/: types_test.rs
scripts/: deploy-testnet.sh  run-demo.sh  setup-all.sh  test-all.sh
(+13 files in other folders)
