[package]
name = "zk-origin-prover"
version = "0.1.0"
description = "ZK-ORIGIN Recursive Prover using Nova"

[dependencies]
# Nova for recursive proofs
nova-snark = "0.31"
pasta_curves = "0.5"
ff = "0.13"
bellpepper-core = "0.4"
bellpepper = "0.4"

# Poseidon hash
neptune = "12.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utils
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "proving_time"
harness = false